--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "practicerestapi",
   "version": "1.0.0",
   "description": "A practice Rest API",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
